# Unofficial-ServiceTitan-CLI-MCP

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
doc/: usage.md
docs/: README.md  api-coverage.md  architecture.md  cli-reference.md  configuration.md  development.md  examples.md  installation.md  mcp-server.md  usage.md
scripts/: _register_mcp.py  gen_api_coverage.py  install.ps1  install.sh
src/st_cli/: auth.py  availability.py  client.py  config.py  dates.py  engine.py  exceptions.py  main.py  mcp_server.py  output.py  pagination.py  registry.py
src/st_cli/commands/: accounting.py  crm.py  dispatch.py  jobs.py  memberships.py  reporting.py  settings.py
tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_dates.py  test_engine.py  test_mcp_server.py  test_output.py  test_pagination.py  test_registry.py  test_reporting_helpers.py
tests/commands/: test_accounting.py  test_crm.py  test_dispatch.py  test_jobs.py  test_memberships.py  test_reporting.py  test_settings.py
