[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "st-cli"
version = "0.1.0"
description = "CLI tool for the ServiceTitan REST API v2"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "time-machine>=2.13",
]

[project.scripts]
st = "st_cli.main:cli"
st-mcp = "st_cli.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/st_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
